[mod] 코드 개선